--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -1,14 +1,37 @@
-html, body {
-                overflow2: hidden;
-                width2: 100%;
-                height2: 100%;
-                margin: 0;
-                padding: 0;
-            }
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	background-color: #333333;
+	font-family: 'Norican', cursive;
+}
 
-            #renderCanvas {
-                width: 500px;
-                height: 500px;
-                touch-action: none;
-            }
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	touch-action: manipulation;
+}
 
+a {
+	color: var(--main-color);
+	text-decoration: none;
+}
+
+.contentSVG {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	background-color: var(--background-color);
+}
+
+.debug {
+	fill: #ff0000;
+	fill-opacity: 25%;
+	stroke: #ff0000;
+	stroke-opacity: 50%;
+
+}
