--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -37,41 +37,52 @@ a {
 	stroke-opacity: 50%;
 }
 
-.barNumber{
+.barNumber {
 	font-size: 90cm;
 	fill: #112266;
 }
-.textSize025{
+
+.textSize025 {
 	font-size: 0.25cm;
 }
-.textSize05{
+
+.textSize05 {
 	font-size: 0.51cm;
 }
-.textSize1{
+
+.textSize1 {
 	font-size: 1cm;
 }
-.textSize2{
+
+.textSize2 {
 	font-size: 2cm;
 }
-.textSize4{
+
+.textSize4 {
 	font-size: 4cm;
 }
-.textSize8{
+
+.textSize8 {
 	font-size: 8cm;
 }
-.textSize16{
+
+.textSize16 {
 	font-size: 16cm;
 }
-.textSize32{
+
+.textSize32 {
 	font-size: 32cm;
 }
-.textSize64{
+
+.textSize64 {
 	font-size: 64cm;
 }
-.textSize128{
+
+.textSize128 {
 	font-size: 128cm;
 }
-.textSize256{
+
+.textSize256 {
 	font-size: 256cm;
 }
 
@@ -79,10 +90,12 @@ a {
 	fill: #000000;
 	fill-opacity: 75%;
 }
+
 .secondFill {
 	fill: #000000;
 	fill-opacity: 50%;
 }
+
 .otherFill {
 	fill: #330099;
 	fill-opacity: 25%;
@@ -90,16 +103,21 @@ a {
 
 .mainLine {
 	stroke: #000000;
-	stroke-width:1cm;
+	stroke-width: 3cm;
 	stroke-opacity: 75%;
+	stroke-linecap: round;
 }
+
 .secondLine {
 	stroke: #000000;
-	stroke-width:1cm;
+	stroke-width: 3cm;
 	stroke-opacity: 50%;
+	stroke-linecap: round;
 }
+
 .otherLine {
 	stroke: #330099;
-	stroke-width:1cm;
+	stroke-width: 3cm;
 	stroke-opacity: 25%;
+	stroke-linecap: round;
 }
