--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -109,14 +109,14 @@ a {
 }
 
 .secondLine {
-	stroke: #000000;
+	stroke: #3333cc;
 	stroke-width: 3cm;
 	stroke-opacity: 50%;
 	stroke-linecap: round;
 }
 
 .otherLine {
-	stroke: #330099;
+	stroke: #660099;
 	stroke-width: 3cm;
 	stroke-opacity: 25%;
 	stroke-linecap: round;
