--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -136,3 +136,41 @@ button{
 	fill: #ffffff;
 	stroke-opacity: 75%;
 }
+
+.barLine1 {
+	stroke: #000000;
+	stroke-width: 0.05cm;
+	stroke-opacity: 25%;
+	stroke-linecap: round;
+}
+.barLine4 {
+	stroke: #000000;
+	stroke-width: 0.25cm;
+	stroke-opacity: 25%;
+	stroke-linecap: round;
+}
+.barLine16 {
+	stroke: #000000;
+	stroke-width: 0.5cm;
+	stroke-opacity: 25%;
+	stroke-linecap: round;
+}
+.barLine64 {
+	stroke: #000000;
+	stroke-width: 1cm;
+	stroke-opacity: 25%;
+	stroke-linecap: round;
+}
+.barLine256 {
+	stroke: #000000;
+	stroke-width: 2cm;
+	stroke-opacity: 25%;
+	stroke-linecap: round;
+}
+
+.pitchLine4 {
+	stroke: #ffffff;
+	stroke-width: 0.1cm;
+	stroke-opacity: 75%;
+	stroke-linecap: round;
+}
