--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -52,7 +52,7 @@ button {
 }
 
 .barNumber {
-	font-size: 90cm;
+	font-size2: 90cm;
 	fill: #112266;
 }
 
@@ -61,7 +61,7 @@ button {
 }
 
 .textSize05 {
-	font-size: 0.51cm;
+	font-size: 0.5cm;
 }
 
 .textSize1 {
