--- a/test/resources/base.css
+++ b/test/resources/base.css
@@ -7,7 +7,7 @@ html {
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	background-color: var(--background_color);
+	background-color: var(--background_base);
 	font-family: 'Zen Kurenaido', serif, cursive;
 	font-style2: italic;
 	font-weight2: bold;
