--- a/test/resources/screen_normal.css
+++ b/test/resources/screen_normal.css
@@ -1,23 +1,181 @@
 :root {
-	--background_color: #dddfff;
-	
-	--background_base: #ccddeeff;
+	--background_color: #ddeeff;
+
+	--background_base: #ddeeff;
 	--grid_base: #ffffffff;
 	--grid_lite: #ffffff66;
 	--prime_base: #000000ff;
 	--prime_lite: #00000066;
 	--secondary_base: #115522ff;
 	--secondary_lite: #11552299;
-	--decor_base:#226699ff;
-	--decor_lite:#22669999;
-	--decor_onion:#22669966;
-	--active_base:#660022ff;
-	--active_lite:#66002233;
+	--decor_base: #226699ff;
+	--decor_lite: #22669999;
+	--decor_onion: #22669966;
+	--active_base: #660022ff;
+	--active_lite: #66002233;
+}
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	background-color: var(--background_base);
+	font-family: 'Zen Kurenaido', serif, cursive;
+	user-select: none;
+}
+.keysNote {
+	fill: var(--decor_onion);
+}
+.keysMeasure {
+	fill: var(--decor_onion);
+}
+.octaveNumNote {
+	fill: var(--decor_onion);
+	font-size: 6cm;
+}
+.octaveNumMeasure {
+	fill: var(--decor_onion);
+	font-size: 16cm;
+}
+.infoLabelPanel {
+	position: fixed;
+	z-index: -1;
+	transform: rotate(90deg);
+	transform-origin: 0% 0%;
+	left: 100vw;
+	width: 100vh;
+	height: 10cm;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+#selectionInfo1 {
+	font-size: 10vh;
+	color: var(--decor_onion);
+	text-overflow: ellipsis;
+	transform: translate(0cm,1.8cm);
+}
+#selectionInfo2 {
+	font-size: 7vh;
+	color: var(--decor_onion);
+	text-overflow: ellipsis;
+	transform: translate(1cm,0.7cm);
+}
+#selectionInfo3 {
+	font-size: 5vh;
+	color: var(--decor_onion);
+	text-overflow: ellipsis;
+	transform: translate(1.5cm,0cm);
+}
+#selectionInfo4 {
+	font-size: 3vh;
+	color: var(--decor_onion);
+	text-overflow: ellipsis;
+	transform: translate(2cm,-0.5cm);
+}
+.timelineBarLabelNote {
+	fill: var(--decor_onion);
+	font-size: 1cm;
+}
+.timelineBarLabelMeasure {
+	fill: var(--decor_onion);
+	font-size: 4cm;
+}
+.timelineBarLabelSong {
+	fill: var(--decor_onion);
+	font-size: 16cm;
+}
+.timelineBarLabelSongFar {
+	fill: var(--decor_onion);
+	font-size: 64cm;
+}
+.timelineBarSubNote {
+	fill: var(--decor_onion);
+	font-size: 0.5cm;
+}
+.timelineBarSubMeasure {
+	fill: var(--decor_onion);
+	font-size: 2cm;
+}
+.barInfoLabelNote {
+	fill: var(--decor_onion);
+	font-size: 1cm;
+}
+.barInfoLabelMeasure {
+	fill: var(--decor_onion);
+	font-size: 4cm;
+}
+.barInfoLabelSong {
+	fill: var(--decor_onion);
+	font-size: 16cm;
+}
+.barInfoLabelFar {
+	fill: var(--decor_onion);
+	font-size: 64cm;
+}
+.barInfoLabelBig {
+	fill: var(--decor_onion);
+	font-size: 256cm;
+}
+.barLine1 {
+	stroke: var(--decor_lite);
+	stroke-width:0.5cm;
+	stroke-linecap: round;
+}
+.barLine4 {
+	stroke: var(--decor_lite);
+	stroke-width: 1cm;
+	stroke-linecap: round;
+}
+.barLine16 {
+	stroke: var(--decor_lite);
+	stroke-width: 4cm;
+	stroke-linecap: round;
+}
+.barLine64 {
+	stroke: var(--decor_lite);
+	stroke-width: 8cm;
+	stroke-linecap: round;
+}
+.barLine256 {
+	stroke: var(--decor_lite);
+	stroke-width: 16cm;
+	stroke-linecap: round;
+}
+.octaveLine1 {
+	stroke: var(--decor_onion);
+	stroke-width: 0.5cm;
+	stroke-linecap: round;
+}
+.octaveLine4 {
+	stroke: var(--decor_onion);
+	stroke-width: 1cm;
+	stroke-linecap: round;
+}
+.octaveLine16 {
+	stroke: var(--decor_onion);
+	stroke-width: 4cm;
+	stroke-linecap: round;
+}
+.pitchLine4 {
+	stroke: var(--decor_onion);
+	stroke-width: 0.1cm;
+	stroke-linecap: round;
+}
+.rhythmLine4 {
+	stroke: var(--decor_onion);
+	stroke-width: 0.1cm;
+	stroke-linecap: round;
+}
+.rhythmWideLine4 {
+	stroke: var(--decor_onion);
+	stroke-width: 0.3cm;
+	stroke-linecap: round;
 }
 
-html {
-	font-family: 'Zen Kurenaido', serif, cursive;
-}
+
+
+
 
 .menuHead {
 	height: 1cm;
