--- a/test/resources/screen_normal.css
+++ b/test/resources/screen_normal.css
@@ -14,7 +14,7 @@
 	--decor_onion: #22669966;
 	--decor_weak: #22669933;
 	--active_base: #660022ff;
-	--active_lite: #66002266;
+	--active_lite: #66002222;
 }
 .average1 {
 	fill: #22669922;
@@ -105,57 +105,57 @@ html {
 }
 
 .timelineBarLabelNote {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 1cm;
 }
 
 .timelineBarLabelMeasure {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 4cm;
 }
 
 .timelineBarLabelSong {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 16cm;
 }
 
 .timelineBarLabelSongFar {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 64cm;
 }
 
 .timelineBarSubNote {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 0.5cm;
 }
 
 .timelineBarSubMeasure {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 2cm;
 }
 
 .barInfoLabelNote {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 1cm;
 }
 
 .barInfoLabelMeasure {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 4cm;
 }
 
 .barInfoLabelSong {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 16cm;
 }
 
 .barInfoLabelFar {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 64cm;
 }
 
 .barInfoLabelBig {
-	fill: var(--decor_onion);
+	fill: var(--decor_solid);
 	font-size: 256cm;
 }
 
@@ -208,19 +208,19 @@ html {
 }
 
 .pitchLine4 {
-	stroke: var(--grid_lite);
+	stroke: var(--active_lite);
 	stroke-width: 0.2cm;
 	stroke-linecap: round;
 }
 
 .rhythmLine4 {
-	stroke: var(--grid_lite);
+	stroke: var(--active_lite);
 	stroke-width: 0.2cm;
 	stroke-linecap: round;
 }
 
 .rhythmWideLine4 {
-	stroke: var(--grid_lite);
+	stroke: var(--active_lite);
 	stroke-width: 0.7cm;
 	stroke-linecap: round;
 }
@@ -306,10 +306,10 @@ html {
 
 @keyframes actionBlink {
 	from {
-		stroke: var(--decor_solid);
+		stroke: var(--prime_base);
 	}
 	to {
-		stroke: var(--active_base);
+		stroke: var(--secondary_base);
 	}
 }
 
@@ -400,6 +400,23 @@ html {
 	stroke: var(--active_base);
 }
 
+.actionSpot4 {
+	fill: none;
+	stroke: var(--active_base);
+	stroke-width: 1cm;
+}
+.actionSpot16 {
+	fill: none;
+	stroke: var(--active_base);
+	stroke-width: 2cm;
+}
+.actionSpot64 {
+	fill: none;
+	stroke: var(--active_base);
+	stroke-width: 4cm;
+}
+
+
 .lyricsText16 {
 	font-size: 10cm;
 	fill: var(--decor_base);
@@ -411,6 +428,19 @@ html {
 .lyricsText1 {
 	font-size: 4cm;
 	fill: var(--decor_base);
+}
+
+.knobLabel4 {
+	font-size: 10cm;
+	fill: var(--prime_base);
+}
+.knobLabel16 {
+	font-size: 20cm;
+	fill: var(--prime_base);
+}
+.knobLabel64 {
+	font-size: 30cm;
+	fill: var(--prime_base);
 }
 
 /*
