--- a/ts4/web/theme/base.css
+++ b/ts4/web/theme/base.css
@@ -2,16 +2,19 @@
 	display: none;
 }
 :root {
-    --background-color: #ccdddd;
-    --aux-color: #66ccaa;
-	--second-color: #9f5ba5;
-    --main-color: #111133;
-    --inter-color: #ff4455;
+    --background-color: #6688aa;
+    --panel-color: #ccdddd;
+    --line-color: #111133;
+    --focus-color: #ff4455;
+	--interaction-color: #9f5ba5;
+	--label-color: #eee133;
+
+	--tapSize: 50px;
 
     --color-default: var(--aux-color);
 
-    --color-paper: #cccccc;
-    --color-textline: #333333;
+    --color-paper: #def;
+    --color-textline: #332244;
     --color-debug: #800;
 	--color-green: #080;
 	--color-blue: #008;
@@ -43,7 +46,7 @@ body {
 #tileLevelSVG {
 	width: 100%;
 	height: 100%;
-	background-color: var(--color-paper);
+	background-color: var(--background-color);
 	user-select: none;
 	touch-action: manipulation;
 	background-image2: url("img/beatbuilder.png");
@@ -58,3 +61,14 @@ body {
 	stroke-opacity: 75%;
 }
 
+.mixFieldBg025 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(0.25*var(--tapSize)); }
+.mixFieldBg05 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(0.5*var(--tapSize)); }
+.mixFieldBg1 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(1*var(--tapSize)); }
+.mixFieldBg2 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(2*var(--tapSize)); }
+.mixFieldBg4 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(4*var(--tapSize)); }
+.mixFieldBg8 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(8*var(--tapSize)); }
+.mixFieldBg16 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(16*var(--tapSize)); }
+.mixFieldBg32 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(32*var(--tapSize)); }
+.mixFieldBg64 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(64*var(--tapSize)); }
+.mixFieldBg128 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(128*var(--tapSize)); }
+.mixFieldBg256 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(256*var(--tapSize)); }
