--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -76,3 +76,20 @@ body {
 .toolBarPanel {
 	fill: var(--panel-color);
 }
+.transparentSpot {
+	fill: #999;
+	fill-opacity: 0.05%;
+}
+.toolBarButtonCircle {
+	stroke: var(--interaction-color);
+	stroke-width: 0.025cm;
+	fill: none;
+}
+.toolBarButtonLabel {
+	fill: var(--interaction-color);
+	text-anchor: middle;
+	alignment-baseline:middle;
+	font-size: 0.66cm;
+	pointer-events: none;
+}
+
