--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -1,117 +1,242 @@
-::-webkit-scrollbar2 {
-	display: none;
+/* cyrillic */
+@font-face {
+    font-family: 'Poiret One';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(poiretone/poiretonecyrillic.woff2) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
+/* latin-ext */
+@font-face {
+    font-family: 'Poiret One';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(poiretone/poiretonelatinext.woff2) format('woff2');
+    unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+    font-family: 'Poiret One';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(poiretone/poiretonelatin.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+::-webkit-scrollbar2 {
+    display: none;
+}
+
 :root {
     --background-color: #6688aa;
     --panel-color: #ccdddd;
     --line-color: #111133;
     --focus-color: #ff4455;
-	--interaction-color: #9f5ba5;
-	--label-color: #eee133;
+    --interaction-color: #9f5ba5;
+    --label-color: #eee133;
 
-	--tapSize: 50px;
+    --tapSize: 50px;
 
     --color-default: var(--aux-color);
 
     --color-paper: #def;
     --color-textline: #332244;
     --color-debug: #800;
-	--color-green: #080;
-	--color-blue: #008;
-	--color-cyan: #088;
-	--color-magenta: #808;
+    --color-green: #080;
+    --color-blue: #008;
+    --color-cyan: #088;
+    --color-magenta: #808;
     --color-yellow: #880;
-    
-    --color-background: #373e48ff;
+
+    --color-background: #112233ff;
     --color-shadow: #00000066;
     --color-toolbar: #6f7c91ff;
     --color-panel: #535d6cff;
-    --color-focus: #d40055ff;
-    --color-interactive: #003300ff;
+    --color-focus: #cc0066ff;
+    --color-interactive: #cc6633ff;
     --color-subtext: #87aadeff;
     --color-text: #ffffffff;
-    
+
 }
 
 #filesinput {
-	display: none;
+    display: none;
 }
 
 html {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Poiret One';
 }
 
 body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     touch-action: manipulation;
     background-color: #ff00ff;
 }
 
 #tileLevelSVG {
-	width: 100%;
-	height: 100%;
-	background-color: var(--color-background);
-	user-select: none;
-	touch-action: manipulation;
-	background-size: cover;
-	stroke-linecap: round;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-background);
+    user-select: none;
+    touch-action: manipulation;
+    background-size: cover;
+    stroke-linecap: round;
 }
 
 .debug {
-	fill: var(--color-debug);
-	fill-opacity: 25%;
-	stroke: var(--color-debug);
-	stroke-opacity: 75%;
-	stroke-width: 0.0256%;
+    fill: var(--color-debug);
+    fill-opacity: 25%;
+    stroke: var(--color-debug);
+    stroke-opacity: 75%;
+    stroke-width: 0.0256%;
 }
 
-.mixFieldBg025 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(0.25*var(--tapSize)); }
-.mixFieldBg05 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(0.5*var(--tapSize)); }
-.mixFieldBg1 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(1*var(--tapSize)); }
-.mixFieldBg2 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(2*var(--tapSize)); }
-.mixFieldBg4 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(4*var(--tapSize)); }
-.mixFieldBg8 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(8*var(--tapSize)); }
-.mixFieldBg16 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(16*var(--tapSize)); }
-.mixFieldBg32 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(32*var(--tapSize)); }
-.mixFieldBg64 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(64*var(--tapSize)); }
-.mixFieldBg128 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(128*var(--tapSize)); }
-.mixFieldBg256 { fill: var(--panel-color); stroke: var(--line-color); stroke-linejoin: round; stroke-width: calc(256*var(--tapSize)); }
+.mixFieldBg025 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(0.25*var(--tapSize));
+}
+
+.mixFieldBg05 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(0.5*var(--tapSize));
+}
+
+.mixFieldBg1 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(1*var(--tapSize));
+}
+
+.mixFieldBg2 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(2*var(--tapSize));
+}
+
+.mixFieldBg4 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(4*var(--tapSize));
+}
+
+.mixFieldBg8 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(8*var(--tapSize));
+}
+
+.mixFieldBg16 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(16*var(--tapSize));
+}
+
+.mixFieldBg32 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(32*var(--tapSize));
+}
+
+.mixFieldBg64 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(64*var(--tapSize));
+}
+
+.mixFieldBg128 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(128*var(--tapSize));
+}
+
+.mixFieldBg256 {
+    fill: var(--panel-color);
+    stroke: var(--line-color);
+    stroke-linejoin: round;
+    stroke-width: calc(256*var(--tapSize));
+}
 
 .fillShadow {
-	fill: var(--color-shadow);
+    fill: var(--color-shadow);
 }
+
 .toolBarPanel {
-	fill: var(--color-toolbar);
+    fill: var(--color-toolbar);
 }
+
 .transparentSpot {
-	fill: #999;
-	fill-opacity: 0.05%;
-	cursor: pointer;
+    fill: #0f0;
+    fill-opacity: 0.050%;
+    cursor: pointer;
 }
+
 .transparentScroll {
-	fill: #999;
-	fill-opacity: 0.05%;
-	cursor: ns-resize;
+    fill: #999;
+    fill-opacity: 0.05%;
+    cursor: ns-resize;
 }
+
 .toolBarButtonCircle {
-	fill: var(--color-interactive);
+    fill: var(--color-interactive);
 }
+
 .toolBarButtonLabel {
-	fill: var(--color-text);
-	text-anchor: middle;
-	alignment-baseline: middle;
-	font-size: 0.5cm;
-	pointer-events2: none;
+    fill: var(--color-text);
+    text-anchor: middle;
+    alignment-baseline: middle;
+    font-size: 0.5cm;
+    pointer-events2: none;
 }
+
 .rightMenuPanel {
-	fill: var(--color-panel);
+    fill: var(--color-panel);
 }
+
 .rightMenuDelimiterLine {
-	fill: var(--color-background);
+    fill: var(--color-background);
 }
+
+.rightMenuLabel {
+    fill: var(--color-text);
+    font-size: 0.5cm;
+}
+
+.rightMenuItemDragBG {
+    stroke: none;
+    fill: var(--color-focus);
+    
+}
+.rightMenuItemActionBG {
+    stroke: none;
+    fill: var(--color-interactive);
+}
+.rightMenuItemSubActionBG {
+    fill: none;
+    stroke: var(--color-interactive);
+    stroke-width: 0.05cm;
+}
+
