--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -33,6 +33,7 @@
 }
 
 :root {
+	/*
     --background-color: #6688aa;
     --panel-color: #ccdddd;
     --line-color: #111133;
@@ -52,14 +53,18 @@
     --color-cyan: #088;
     --color-magenta: #808;
     --color-yellow: #880;
+	*/
 
-    --color-background: #112233ff;
-    --color-shadow: #00000066;
-    --color-toolbar: #6f7c91ff;
-    --color-panel: #535d6cff;
-    --color-focus: #cc0066ff;
-    --color-interactive: #cc6633ff;
-    --color-subtext: #87aadeff;
+	--color-shadow: #00000066;
+
+    --color-background: #000609ff;
+    --color-toolbar: #223344ff;
+    --color-panel: #112233ff;
+
+	--color-focus: #cc0066ff;
+    --color-interactive: #cc3300ff;
+
+	--color-subtext: #66cc99ff;
     --color-text: #ffffffff;
 
 }
@@ -202,6 +207,8 @@ body {
 
 .toolBarButtonCircle {
     fill: var(--color-interactive);
+	stroke: var(--color-text);
+    stroke-width: 0.01cm;
 }
 
 .toolBarButtonLabel {
@@ -226,12 +233,14 @@ body {
 }
 
 .rightMenuItemDragBG {
-    stroke: none;
+    stroke: var(--color-text);
+    stroke-width: 0.01cm;
     fill: var(--color-focus);
     
 }
 .rightMenuItemActionBG {
-    stroke: none;
+    stroke: var(--color-text);
+    stroke-width: 0.01cm;
     fill: var(--color-interactive);
 }
 .rightMenuItemSubActionBG {
