--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -237,7 +237,7 @@ body {
     font-size: 0.5cm;
 }
 .rightMenuSubLabel {
-    fill: var(--color-text);
+    fill: var(--color-subtext);
     font-size: 0.33cm;
 }
 
