--- a/riffshareiii/theme/menu.css
+++ b/riffshareiii/theme/menu.css
@@ -14,12 +14,12 @@
 
 .rightMenuLabel {
     fill: var(--color-text);
-    font-size: 0.5cm;
+    font-size: var(--size-05cm);
     pointer-events: none;
 }
 .rightMenuSubLabel {
     fill: var(--color-subtext);
-    font-size: 0.4cm;
+    font-size: var(--size-04cm);
     pointer-events: none;
 }
 
@@ -44,7 +44,7 @@
     fill: var(--color-interactive);
     text-anchor: middle;
     alignment-baseline22: middle;
-    font-size: 0.5cm;
+    font-size: var(--size-05cm);
     pointer-events: none;
 	font-family: "Material-Design-Iconic-Font";
 }
@@ -52,7 +52,7 @@
     fill: var(--color-text);
     text-anchor: middle;
     alignment-baseline22: middle;
-    font-size: 0.5cm;
+    font-size: var(--size-05cm);
     pointer-events: none;
 	font-family: "Material-Design-Iconic-Font";
 }
@@ -68,7 +68,7 @@
     fill: var(--color-text);
     text-anchor: middle;
     alignment-baseline222: middle;
-    font-size: 0.5cm;
+    font-size: var(--size-05cm);
     pointer-events2: none;
 	
 	font-family: "Material-Design-Iconic-Font";
