--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -34,7 +34,7 @@
     display: none;
 }
 
-#filesinput {
+#file_midi_input {
     display: none;
 }
 
@@ -45,6 +45,7 @@ html {
     padding: 0px;
     font-family2: 'Poiret One';
     font-family2: 'Fontquan-XinYiJiXiangSong-Regular';
+    background-color: #ff0000;
 }
 
 body {
@@ -56,15 +57,32 @@ body {
     background-color: #ff00ff;
 }
 
+#pagediv {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    min-height: 100%;
+    background-color: #0000ff;
+}
+
 #tileLevelSVG {
     width: 100%;
     height: 100%;
+    min-height: 100%;
     background-color: var(--color-background);
     user-select: none;
     touch-action: manipulation;
     background-size: cover;
     stroke-linecap: round;
+    margin: 0px;
+    padding: 0px;
+    background-color2: #00ffff;
 }
+
+html, body, #pagediv, #tileLevelSVG {
+    height:100%;
+ }
 
 .debug {
     fill: var(--color-debug);
