--- a/riffshareiii/theme/font1.css
+++ b/riffshareiii/theme/font1.css
@@ -1,3 +1,5 @@
 html {
-    font-family: 'Poiret One';
+    font-family2: 'Poiret One';
+    font-family2: 'Roboto';
+    font-family: 'MontserratAlternates-Regular';
 }
