--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -1,4 +1,4 @@
-/* cyrillic */
+/* cyrillic 
 @font-face {
     font-family: 'Poiret One';
     font-style: normal;
@@ -7,8 +7,8 @@
     src: url(poiretone/poiretonecyrillic.woff2) format('woff2');
     unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-
-/* latin-ext */
+*/
+/* latin-ext 
 @font-face {
     font-family: 'Poiret One';
     font-style: normal;
@@ -17,8 +17,8 @@
     src: url(poiretone/poiretonelatinext.woff2) format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
-
-/* latin */
+*/
+/* latin 
 @font-face {
     font-family: 'Poiret One';
     font-style: normal;
@@ -26,6 +26,17 @@
     font-display: swap;
     src: url(poiretone/poiretonelatin.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+*/
+/*
+@font-face {
+    font-family: 'Roboto';
+    src: url(roboto/Roboto-Regular.ttf);
+}
+*/
+@font-face {
+    font-family: 'MontserratAlternates-Regular';
+    src: url(MontserratAlternates/MontserratAlternates-Regular.ttf);
 }
 
 
@@ -46,6 +57,7 @@ html {
     font-family2: 'Poiret One';
     font-family2: 'Fontquan-XinYiJiXiangSong-Regular';
     background-color: #ff0000;
+    user-select: none;
 }
 
 body {
@@ -80,9 +92,12 @@ body {
     background-color2: #00ffff;
 }
 
-html, body, #pagediv, #tileLevelSVG {
-    height:100%;
- }
+html,
+body,
+#pagediv,
+#tileLevelSVG {
+    height: 100%;
+}
 
 .debug {
     fill: var(--color-debug);
@@ -94,4 +109,37 @@ html, body, #pagediv, #tileLevelSVG {
 
 .fillShadow {
     fill: var(--color-shadow);
+}
+
+#warningDialog {
+    background-color: color-mix(in lab, transparent 20%, var(--color-background));
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display2: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    display:none;
+}
+
+#warningIcon {
+    font-size: calc(2*var(--tapSize));
+    color: var(--color-toolbar);
+    font-family: 'Material-Design-Iconic-Font';
+    pointer-events: none;
+}
+
+#warningTitle {
+    font-size: calc(0.75*var(--tapSize));
+    color: var(--color-text);
+    pointer-events: none;
+}
+
+#warningText {
+    font-size: calc(0.33*var(--tapSize));
+    color: var(--color-subtext);
+    pointer-events: none;
 }
