--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -45,6 +45,20 @@
     display: none;
 }
 
+:root {
+    --label-4cm: calc(4.0*var(--font-ratio)*var(--tapSize));
+    --label-1cm: calc(1.0*var(--font-ratio)*var(--tapSize));
+    --label-075cm: calc(0.75*var(--font-ratio)*var(--tapSize));
+    --label-05cm: calc(0.5*var(--font-ratio)*var(--tapSize));
+    --label-04cm: calc(0.4*var(--font-ratio)*var(--tapSize));
+
+    --icon-4cm: calc(4.0*var(--tapSize));
+    --icon-1cm: calc(1.0*var(--tapSize));
+    --icon-075cm: calc(0.75*var(--tapSize));
+    --icon-05cm: calc(0.5*var(--tapSize));
+    --icon-04cm: calc(0.4*var(--tapSize));
+}
+
 #file_midi_input {
     display: none;
 }
@@ -58,6 +72,7 @@ html {
     font-family2: 'Fontquan-XinYiJiXiangSong-Regular';
     background-color: #ff0000;
     user-select: none;
+
 }
 
 body {
@@ -110,59 +125,32 @@ body,
 .fillShadow {
     fill: var(--color-shadow);
 }
-/*
-#warningDialog {
-    background-color: color-mix(in lab, transparent 20%, var(--color-background));
-    z-index: 2;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display2: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
-    display:none;
+
+.warningBG {
+    fill: color-mix(in lab, transparent 10%, var(--color-background));
 }
 
-#warningIcon {
-    font-size: calc(2*var(--tapSize));
-    color: var(--color-toolbar);
-    font-family: 'Material-Design-Iconic-Font';
-    pointer-events: none;
-}
-
-#warningTitle {
-    font-size: calc(0.75*var(--tapSize));
-    color: var(--color-text);
-    pointer-events: none;
-}
-
-#warningText {
-    font-size: calc(0.33*var(--tapSize));
-    color: var(--color-subtext);
-    pointer-events: none;
-}
-*/
-.warningBG{
-	fill: color-mix(in lab, transparent 10%, var(--color-background));
-}
 .warningIcon {
-    font-size: calc(4*var(--tapSize));
+    font-size222: calc(4*var(--tapSize));
+    font-size: var(--icon-4cm);
     fill: var(--color-toolbar);
-	text-anchor: middle;
+    text-anchor: middle;
     font-family: 'Material-Design-Iconic-Font';
     pointer-events: none;
 }
+
 .warningTitle {
-    font-size: calc(0.75*var(--tapSize));
+    font-size222: calc(0.75*var(--tapSize));
+    font-size: var(--label-075cm);
     fill: var(--color-text);
-	text-anchor: middle;
+    text-anchor: middle;
     pointer-events: none;
 }
+
 .warningDescription {
-    font-size: calc(0.33*var(--tapSize));
+    font-size222: calc(0.33*var(--tapSize));
+    font-size: var(--label-04cm);
     fill: var(--color-subtext);
-	text-anchor: middle;
+    text-anchor: middle;
     pointer-events: none;
 }
