--- a/riffshareiii/theme/font2big.css
+++ b/riffshareiii/theme/font2big.css
@@ -1,3 +1,6 @@
+:root {
+    --font-ratio: 1.5;
+}
 @font-face {
     font-family: 'Fontquan-XinYiJiXiangSong';
     src: url(Fontquan-XinYiJiXiangSong-Regular/Fontquan-XinYiJiXiangSong-Regular.ttf);
