--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -90,14 +90,17 @@ body {
     margin: 0px;
     padding: 0px;
     min-height: 100%;
-    background-color: #0000ff;
+    background-color22: #0000ff;
+    background-image: url("bg/burevestnik.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #tileLevelSVG {
     width: 100%;
     height: 100%;
     min-height: 100%;
-    background-color: var(--color-background);
+    background-color222: var(--color-background);
     user-select: none;
     touch-action: manipulation;
     background-size: cover;
@@ -105,6 +108,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color2: #00ffff;
+    background: color-mix(in lab, transparent 20%, var(--color-background))
 }
 
 html,
